# pinetime

./: Cargo.toml  README.md  armv7-none-eabi.json  justfile  link.x  openocd.cfg
src/: main.rs
