[package]
name = "pinetime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pinetime"
test = false
doctest = false
bench = false

[profile.release]
# debug = true
# opt-level = "s"


[dependencies]
# https://github.com/lulf/watchful/blob/main/firmware/Cargo.toml
embassy-nrf = { version = "0.3", features = ["defmt", "nrf52832", "time-driver-rtc1", "rt", "gpiote", "unstable-pac", "time", "nfc-pins-as-gpio"] }
