[package]
name = "pinetime"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "pinetime"
test = false
doctest = false
bench = false

[profile.release]
debug = true
# opt-level = "s"


[dependencies]
cortex-m = { version = "0.7.7", features = [ "inline-asm" ] }
# https://github.com/lulf/watchful/blob/main/firmware/Cargo.toml
embassy-nrf = { version = "0.3", features = [ "nrf52832", "unstable-pac" ] }
